# acorn-hc

./: .gitignore  .hcignore  CHANGELOG-UNRELEASED.md  Cargo.toml  README.md  app.json  conductor-config.toml  config.nix  default.nix  install-holochain.sh  key.key  package-lock.json  package.json  package.sh  starter.conductor-config.toml  update-dna-address.js
.cargo/registry/cache/github.com-1ecc6299db9ec823/: aho-corasick-0.6.10.crate  ansi_term-0.11.0.crate  arrayref-0.3.5.crate  atty-0.2.13.crate  autocfg-0.1.7.crate  backtrace-0.3.27.crate  backtrace-sys-0.1.32.crate  base64-0.10.1.crate  block-buffer-0.3.3.crate  byte-tools-0.2.0.crate  byteorder-1.3.2.crate  c2-chacha-0.2.3.crate  cc-1.0.46.crate  chrono-0.4.6.crate  colored-1.7.0.crate  crossbeam-channel-0.3.8.crate  crunchy-0.2.2.crate  difference-2.0.0.crate  digest-0.7.6.crate  env_logger-0.6.1.crate  futures-channel-preview-0.3.0-alpha.17.crate  futures-core-preview-0.3.0-alpha.17.crate  futures-executor-preview-0.3.0-alpha.17.crate  futures-io-preview-0.3.0-alpha.17.crate  futures-preview-0.3.0-alpha.17.crate  futures-sink-preview-0.3.0-alpha.17.crate  futures-util-preview-0.3.0-alpha.17.crate  generic-array-0.9.0.crate  getrandom-0.1.13.crate  hcid-0.0.6.crate  hdk-0.0.33-alpha6.crate  hdk-0.0.34-alpha1.crate  hdk_proc_macros-0.0.33-alpha6.crate  hdk_proc_macros-0.0.34-alpha1.crate  holochain_core_types-0.0.33-alpha6.crate  holochain_core_types-0.0.34-alpha1.crate  holochain_json_api-0.0.17.crate  holochain_json_derive-0.0.17.crate  holochain_logging-0.0.4.crate  holochain_persistence_api-0.0.10.crate  (+72 more)
.cargo/registry/src/github.com-1ecc6299db9ec823/autocfg-0.1.7/: .cargo_vcs_info.json
.cargo/registry/src/github.com-1ecc6299db9ec823/backtrace-0.3.27/: .cargo_vcs_info.json  Cargo.toml
.cargo/registry/src/github.com-1ecc6299db9ec823/backtrace-sys-0.1.32/: .cargo_vcs_info.json
.cargo/registry/src/github.com-1ecc6299db9ec823/cc-1.0.46/: .cargo_vcs_info.json  Cargo.toml
.cargo/registry/src/github.com-1ecc6299db9ec823/colored-1.7.0/: .cargo_vcs_info.json  CHANGELOG.md  Cargo.toml  Cargo.toml.orig  README.md
.cargo/registry/src/github.com-1ecc6299db9ec823/env_logger-0.6.1/: .cargo_vcs_info.json  Cargo.toml
.cargo/registry/src/github.com-1ecc6299db9ec823/getrandom-0.1.13/: .cargo_vcs_info.json
.cargo/registry/src/github.com-1ecc6299db9ec823/hcid-0.0.6/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig  README.md
.cargo/registry/src/github.com-1ecc6299db9ec823/hdk-0.0.33-alpha6/: Cargo.toml
.cargo/registry/src/github.com-1ecc6299db9ec823/rust-base58-0.0.4/: .Cargo.toml.swp  Cargo.toml  readme.md
.cargo/registry/src/github.com-1ecc6299db9ec823/rust-base58-0.0.4/src/: .base58.rs.swp  base58.rs  lib.rs
.circleci/: config.yml
crates/dna_help/: Cargo.toml
crates/dna_help/src/: lib.rs
dna-src/: conductor-config.toml  key.key
dna-src/test/: index.js
dna-src/zomes/my_zome/: zome.json
dna-src/zomes/my_zome/code/: .hcbuild  Cargo.toml
dna-src/zomes/my_zome/code/src/: lib.rs
dna-src/zomes/test/: zome.json
dna-src/zomes/test/code/: .hcbuild  Cargo.toml
dnas/profiles/: app.json
dnas/profiles/profiles.dna.workdir/: dna.json
dnas/profiles/tests/: package.json
dnas/profiles/tests/src/: index.ts  profiles.ts
dnas/profiles/zomes/acorn_profiles/: Cargo.toml  zome.json
dnas/profiles/zomes/acorn_profiles/code/: .hcbuild  Cargo.toml
dnas/profiles/zomes/acorn_profiles/code/src/: lib.rs
dnas/profiles/zomes/acorn_profiles/code/src/anchor/: mod.rs
dnas/profiles/zomes/acorn_profiles/code/src/profile/: mod.rs
dnas/profiles/zomes/acorn_profiles/src/: lib.rs
dnas/profiles/zomes/acorn_profiles/src/profile/: mod.rs
dnas/projects/: app.json
dnas/projects/projects.dna.workdir/: dna.json
dnas/projects/zomes/acorn_projects/: Cargo.toml  zome.json
dnas/projects/zomes/acorn_projects/code/: .hcbuild  Cargo.toml
dnas/projects/zomes/acorn_projects/code/src/: lib.rs
dnas/projects/zomes/acorn_projects/code/src/anchor/: mod.rs
dnas/projects/zomes/acorn_projects/code/src/project/: mod.rs
dnas/projects/zomes/acorn_projects/src/: lib.rs
dnas/projects/zomes/acorn_projects/src/project/: edge.rs  entry_point.rs  goal.rs  goal_comment.rs  goal_member.rs  goal_vote.rs  member.rs  mod.rs  project_meta.rs
nix/: default.nix
nix/holochain/: default.nix
nix/release/: default.nix
nix/test/: default.nix
oldtest/: index.js
test/: README.md  index.js  package-lock.json  package.json
test/src/: index.ts  profiles.ts  projects.ts  signals.ts
tests/src/: profiles.ts  timer.ts
ui-src/: package-lock.json  package.json  webpack.config.js
ui-src/src/: holochainConfig.js  index.js  reducer.js  styles.js
ui-src/src/agents/: actions.js  reducer.js
ui-src/src/components/: App.js  GoalForm.js  GoalFormContainer.js  Help.js  HoverOverlay.js  Icon.js  MultiEditBar.js  PeoplePicker.js  StatusIcon.js  StatusPicker.js  VerticalActionsList.js
ui-src/src/create-goal/: actions.js  reducer.js
ui-src/src/drawing/: coordinateSystems.js  dimensions.js  drawEdge.js  drawGoalCard.js  drawOverlay.js  eventDetection.js  imageCache.js  index.js  layoutFormula.js
ui-src/src/edges/: actions.js  reducer.js
ui-src/src/event-listeners/: index.js
ui-src/src/goal-creation/: actions.js  reducer.js
ui-src/src/goal-form/: actions.js  reducer.js
ui-src/src/goal-members/: actions.js  reducer.js
ui-src/src/goals/: actions.js  archiveHelper.js  reducer.js
ui-src/src/hover/: actions.js  reducer.js
ui-src/src/keyboard/: actions.js  reducer.js
ui-src/src/mouse/: actions.js  reducer.js
ui-src/src/screensize/: actions.js  reducer.js
ui-src/src/selection/: actions.js  reducer.js
ui-src/src/viewport/: actions.js  reducer.js
ui-src/src/who-am-i/: actions.js  reducer.js
zomes/holo_acorn/: zome.json
zomes/holo_acorn/code/: .hcbuild  Cargo.toml
zomes/holo_acorn/code/src/: lib.rs
zomes/holo_acorn/code/src/anchor/: mod.rs
zomes/holo_acorn/code/src/goal/: mod.rs
zomes/holo_acorn/code/src/profile/: mod.rs
zomes/my_zome/code/: .hcbuild  Cargo.toml
(+234 files in other folders)
