[workspace]
members = [
  "crates/dna_help",
  "dnas/profiles/zomes/acorn_profiles",
  "dnas/projects/zomes/acorn_projects",
]

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[patch.crates-io]
# hc_utils = {git = "https://github.com/guillemcordoba/hc-utils", branch = "develop", package = "hc_utils"}
hdk3 = {git = "https://github.com/holochain/holochain.git", rev = "65e05a5b95596d056f3b40dc5ce0e9fec2c5f073", package = "hdk3"}
# holo_hash = {git = "https://github.com/holochain/holochain.git", rev = "ad3ccd0a126683d5fa44985f7abc18f1d891de01", package = "holo_hash"}
