[workspace]
members = [
  "crates/dna_help",
  "dnas/profiles/zomes/acorn_profiles",
  "dnas/projects/zomes/acorn_projects",
]

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[patch.crates-io]
# hc_utils = {git = "https://github.com/guillemcordoba/hc-utils", branch = "develop", package = "hc_utils"}
hdk3 = {git = "https://github.com/holochain/holochain.git", rev = "2dcb4d77c3909b3d94b46ffca385f7cc41c2f00c", package = "hdk3"}
# holo_hash = {git = "https://github.com/holochain/holochain.git", rev = "ad3ccd0a126683d5fa44985f7abc18f1d891de01", package = "holo_hash"}
