[package]
name = "dna_help"
version = "0.1.0"
authors = ["Connor Turland <connor@sprillow.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# hdk3 = { git = "ssh://git@github.com/holochain/holochain.git", rev = "b064f749503f3053a0e1356177c3e4fcce5748b4", package = "hdk3" }
hdk3 = { git = "ssh://git@github.com/holochain/holochain.git", branch = "develop", package = "hdk3" }
paste = "1.0.1"

