[package]
name = "dna_help"
version = "0.1.0"
authors = ["Connor Turland <connor@sprillow.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "=1.0.104"
hdk3 = { git = "https://github.com/holochain/holochain", rev = "41ee0119df466708c408453da3ae520bed281fd6", package = "hdk3" }
paste = "1.0.1"

