[package]
name = "holo_acorn"
version = "0.1.0"
authors = ["hector vasquez <hectorvasquez05@gmail.com>"]
edition = "2018"

[dependencies]
serde = "=1.0.89"
serde_json = { version = "=1.0.39", features = ["preserve_order"] }
serde_derive = "=1.0.89"
hdk = "=0.0.39-alpha4"
holochain_wasm_utils = "=0.0.39-alpha4"
holochain_json_derive = "=0.0.17"
hdk_proc_macros = "=0.0.39-alpha4"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
