[package]
name = "my_zome"
version = "0.1.0"
authors = ["Connor Turland <connorturland@gmail.com>"]
edition = "2018"

[dependencies]
serde = "=1.0.89"
serde_json = { version = "=1.0.39", features = ["preserve_order"] }
serde_derive = "=1.0.89"
hdk = { path = "../../../../../../holochain/rust/hdk-rust" }
hdk-proc-macros = { path = "../../../../../../holochain/rust/hdk-proc-macros" }
holochain_wasm_utils = { path = "../../../../../../holochain/rust/wasm_utils" }
holochain_json_derive = { version = "0.0.1-alpha2" }

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
