[package]
name = "acorn_projects"
version = "0.3.6"
edition = "2018"

[dependencies]
serde = "=1.0.104"
hdk3 = { git = "ssh://git@github.com/holo-host/holochain.git", rev = "eb0eb3a2c6229d8c8567567cdd0858f3da9173e6", package = "hdk3" }
derive_more = "0.99.9"
dna_help = { path = "../../../../crates/dna_help" }

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
