[package]
name = "acorn_projects"
version = "0.3.6"
edition = "2018"

[dependencies]
serde = "=1.0.104"
# hdk3 = { git = "ssh://git@github.com/holochain/holochain.git", rev = "b064f749503f3053a0e1356177c3e4fcce5748b4", package = "hdk3" }
hdk3 = { git = "ssh://git@github.com/holochain/holochain.git", branch = "develop", package = "hdk3" }
derive_more = "0.99.9"
paste = "1.0.1"
dna_help = { path = "../../../../crates/dna_help" }

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
