[package]
name = "acorn_projects"
version = "0.3.6"
edition = "2018"

[dependencies]
serde = "=1.0.104"
hdk3 = { git = "ssh://git@github.com/holochain/holochain.git", rev = "4714fbddc48f1f9987c9f574b8d06510ea58ab16", package = "hdk3" }
derive_more = "0.99.9"
paste = "1.0.1"
dna_help = { path = "../../../../crates/dna_help" }

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
