[package]
name = "acorn_profiles"
version = "0.3.1"
authors = ["hc-scaffold-framework"]
edition = "2018"

[dependencies]
serde = "=1.0.104"
serde_json = { version = "=1.0.47", features = ["preserve_order"] }
serde_derive = "=1.0.104"
hdk = "=0.0.47-alpha1"
holochain_wasm_utils = "=0.0.47-alpha1"
holochain_json_derive = "=0.0.23"
hdk_proc_macros = "=0.0.47-alpha1"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
